Implemented Slf4j Logger for all the Service class